================= Stable-2017-08-24 ==================
; Changed ; Minor ; Compiler ; #5214
The temporary directory is always deleted, regardless of whether compilation fails or succeeds.

; Changed ; Minor ; Compiler ; #5430
Added option removers to the option registry. Also added a test case for options.


================= Stable-2017-08-09 ==================
; Fixed ; Minor ; Compiler ; #5416
Fixed generation of VendorAnnotation tag in FMI XML file to correctly handle FMI 2.0.

; Other ; Minor ; Compiler ; #5417 #5420
Improved compiler performance in general. In some cases up to -10% compilation time and -20% memory peak when compiling

; Fixed ; Minor ; Runtime ; #5421
Improved performance in the sparse linear solver (about 30%).

; Fixed ; Minor ; Compiler ; #5408
Removed erreneous xml tag where several annotations were listed under the
annotation tag in VendorAnnotatios.

; Fixed ; Minor ; Compiler ; #5402
Fixed c code generation bug when sparse Jacobians are generated with nonlinear
blocks present in model.

; Fixed ; Minor ; Compiler ; #5404
Fixed missing include of the block solver in the FMI templates.

; Changed ; Minor ; Compiler, Runtime ; #5402
Generation of sparse Jacobian for linear systems is now controlled by a
threshold and either the dense Jacobian is generated or the sparse, not both. 

; Changed ; Minor ; Runtime ; #5401
Added defines to handle missing CLOCKS_PER_SEC

; Changed ; Minor ; Runtime ; #5400
Reworked how we check if a directory exist.

; Changed ; Minor ; Runtime ; #5399
Delayed check of the resource location until it is asked for.

; Fixed ; Minor ; Compiler ; #5394
Fixed compiler crash when using function with several outputs where one is 
a zero-size array.

; Changed ; Minor ; Compiler ; #5398
Removed the need to define fmu type in the make file

; Feature ; Minor ; Compiler ; #5375
Added compiler option "event_output_vars". When set, output variables are
generated for each event indicator.

; Other ; Minor ; General ; #5393